--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ header {
 .box {
     color: white;
     height: 110px;
-    width: calc(100% / 3)
+    width: 30%;
     float: left;
     background-color: #0f0e17;
     padding: 10px;
@@ -47,4 +47,8 @@ img {
     width: 100px;
     float: left;
     margin: 0 10px;
+}
+
+a {
+    display: block;
 }
